# propus_spool

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_DEPLOY.md  DOCKER_INSTALLATION.md  Dockerfile  EXAMPLES.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  alembic.ini  check_nas.py  check_sync.py  debug_sync.py  deploy_nas.py  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  requirements.txt
backend/: .env.example  README.md  backup_db.sh  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05f3346e9f36_add_device_code_to_device.py  4b9f107a3faf_initial_tables.py  a1b2c3d4e5f6_add_category_to_permissions.py  c3f8a2b1d9e7_add_installed_plugins_table.py  c5d8f74c07af_add_ip_address_and_last_seen_at_to_.py  d4e5f6a7b8c9_add_plugin_type_and_page_url.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py
backend/app/api/v1/: admin.py  dashboard.py  devices.py  filaments.py  me.py  printers.py  router.py  schemas.py  schemas_device.py  schemas_filament.py  schemas_spool.py  (+2 more)
backend/app/core/: config.py  database.py  logging_config.py  middleware.py  security.py
backend/app/models/: __init__.py  base.py  device.py  filament.py  location.py  plugin.py  printer.py  rbac.py  spool.py  user.py
backend/app/plugins/: base.py  manager.py
backend/app/services/: ams_slots_service.py  plugin_service.py  spool_service.py  spoolman_import_service.py
backend/tests/: conftest.py  test_ams_slots.py  test_auth.py  test_spool_policies.py
(+102 files in other folders)
